# qtvnc

./: CMakeLists.txt  connectdialog.cpp  connectdialog.h  main.cpp  qtvnc.pro  rfbconnection.cpp  rfbconnection.h  rfbcrypto.cpp  rfbcrypto.h  rfbprotocol.h  vncconnection.cpp  vncconnection.h  vncviewerwidget.cpp  vncviewerwidget.h  移植.md
docs/plans/: 2026-04-22-qtvnc-design.md  2026-04-22-qtvnc-implementation.md
